# gtimelog

./: .bzrignore  .coveragerc  .gitattributes  .gitignore  .python-version  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  HACKING.rst  HACKING.txt  MANIFEST.in  Makefile  NEWS.rst  NEWS.txt  NOTES.rst  PKG-INFO  PPA.rst  README.rst  README.txt  TODO.rst  TODO.txt  appveyor.yml  benchmark.py  constraints.txt  difftime.py  dist.py  gtimelog  gtimelog.appdata.xml  gtimelog.desktop  gtimelog.desktop.in  gtimelog.glade  gtimelog.gladep  gtimelog.py  gtimelog.rst  gtimelogrc.example  gtimelogrc.rst  lt.pov.mg.gtimelog.gschema.xml  mockup.py  org.gtimelog.GTimeLog.json  (+12 more)
.github/workflows/: build.yml
.svn/: all-wcprops  dir-prop-base  entries
.svn/prop-base/: difftime.py.svn-base
.svn/text-base/: dist.py.svn-base  export-my-calendar.py.svn-base  gtimelogrc.example.svn-base  setup.py.svn-base
debian/: changelog  clean  compat  control  copyright  dirs  docs  gbp.conf  gtimelog.1  gtimelog.install  gtimelog.lintian-overrides  gtimelog.manpages  gtimelog.rst  gtimelogrc.5  rules  watch
debian/patches/: 00list  01-glade.dpatch  02-gtimelog.dpatch  03-wrap_fix.dpatch  series  (+5 more)
docs/: Makefile  footer.rst  formats.rst  gtimelogrc.txt  index.rst  mg.css  website.rst
flatpak/: desktop-file-install-fix.patch  org.gtimelog.GTimeLog.json  org.gtimelog.GTimeLog.yaml
gtimelog.egg-info/: PKG-INFO  SOURCES.txt
po/: POTFILES.in  en.po  gtimelog.pot  lt.po
scripts/: README.rst  csv.py  difftime.py  export-my-calendar.py  sum.py  timelog.py  today.py  workdays.py
(+87 files in other folders)
