[bdist_wheel]
universal = 1

[metadata]
license_file = COPYING

[flake8]
doctests = yes

[pytest]
norecursedirs = .* *.egg-info dist build tmp scripts
python_files = tests.py
python_functions = !test_suite
addopts = --doctest-modules --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE

[zest.releaser]
history_file = NEWS.rst
python-file-with-version = src/gtimelog/__init__.py

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

