[flake8]
doctests = yes
exclude = .git,.tox,build,__pycache__
ignore = E121,E123,E126,E133,E226,E241,E242,E704,E501,E301,E261,E127,E128,W391,W503,E402

[pytest]
norecursedirs = .* *.egg-info dist build tmp scripts
python_files = tests.py
python_functions = !test_suite
addopts = --doctest-modules --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE

[bdist_wheel]
universal = 1

[metadata]
license_file = COPYING

[zest.releaser]
python-file-with-version = src/gtimelog/__init__.py

[egg_info]
tag_build = 
tag_date = 0

